--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,47 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* You can add global styles to this file, and also import other style files */
+
+
+:root {
+    --white-color: #ffffff;
+    --light-grey-color: #EAE8E8;
+    --light-green-color: #1ecc78;
+    --green-color: #0cb765;
+    --red-color: #EB1D27;
+    --blue-color: #4f78a4;
+    --dark-red-color: #d31017;
+    --dark-grey-color: #363636;
+    --black-color: #333030;
+    --deep-black-color: #000000;
+  }
+
+html, body { 
+    height: 100%;
+ }
+
+body { 
+    margin: 0; 
+    font-family: Roboto, 
+    "Helvetica Neue", sans-serif;
+    background-color: var(--light-grey-color);
+ }
+
+ .container {
+    padding: 30px;
+    flex: 0 1 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+}
+
+.card-width {
+    max-width: 400px;
+  }
+  
+  .card-header-image {
+    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+    background-size: cover;
+  }
+
